# ml_sound_demo

./: .gitignore  README.md  flake.nix  pyproject.toml
ml-sound-demo/: gender.py  transcribe.py
ml_sound_demo/: __init__.py  gender.py  transcribe.py
tests/: gender_1000.py  transcribe_100.py
training/: gender.py
whisper-demo/: transcribe.py
