[project]
name = "ml_sound_demo"
version = "0.1.0"
description = "Machine learning sound demo"
authors = [{ email = "nick.libraries@gmail.com" }]
dependencies = [
    "torch >= 2.0.1",
    "transformers >= 4.30.2",
    "datasets >= 2.12.0",
    "soundfile >= 0.12.1",
    "librosa >= 0.10.0",
    "evaluate >= 0.4.0",
    "jiwer >= 3.0.2",
    "scikit-learn >= 1.2.1",
    "matplotlib >= 3.7.1"
]

[tool.pyright]
typeCheckingMode = "off"

[tool.ruff]
fixable = ["ALL"]
select = ["ALL"]
ignore = ["D", "T20", "ERA", "INP", "ANN", "FIX", "TD"]

[tool.black]
